--- a/ResourceManager/ResourceManager.csproj
+++ b/ResourceManager/ResourceManager.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResCountQuery.cs" />
     <Compile Include="ResMxQueryComponent.cs" />
     <Compile Include="ResourceHtCard.cs" />
     <Compile Include="ResourceMgrCard.cs" />
